# onechuk

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
CAD/: nunchuk_usb_housing.SLDPRT  nunchuk_usb_housing.STL  ~$nunchuk_usb_housing.SLDPRT
components/ble_hid/: BLE_HID.cpp  CMakeLists.txt  ble_init.c  ble_utils.c
components/ble_hid/include/: BLE_HID.h  ble_init.h  ble_utils.h
components/device_profile/: BlueDeviceProfile.cpp  CMakeLists.txt  DeviceProfile.cpp  GreenDeviceProfile.cpp  IDeviceProfile.cpp  RedDeviceProfile.cpp
components/device_profile/include/: BlueDeviceProfile.h  DeviceProfile.h  GreenDeviceProfile.h  IDeviceProfile.h  RedDeviceProfile.h
components/nunchuk/: CMakeLists.txt  NunchukController.cpp
components/nunchuk/include/: NunchukController.h
components/nunchuk/test/: CMakeLists.txt  test_NunchukController.cpp
components/rgb_led/: CMakeLists.txt  RGB_CC_LED.cpp  rgb_commands.cpp
components/rgb_led/include/: RGB_CC_LED.h  rgb_commands.h
components/rgb_led/test/: CMakeLists.txt  test_RGB_CC_LED.cpp
components/tflite-micro/: CMakeLists.txt  gesture_model_tflite.cc  gesture_model_tflite.h
components/tfmicro/: CMakeLists.txt  Joystick_CNN_Model.cpp  Joystick_CNN_Model.h  gesture_model_tflite.cc  gesture_model_tflite.h
components/tinypico/: CMakeLists.txt  TinyPICO.cpp  tinypico.cpp
components/tinypico/include/: tinypico.h
components/tinypico/test/: CMakeLists.txt  test_tinypico.cpp
main/: CMakeLists.txt  main.cpp  settings.h
main/queues/: queues.cpp  queues.h
main/tasks/: tasks.cpp  tasks.h
test/: CMakeLists.txt  Makefile  sdkconfig.defaults
test/main/: CMakeLists.txt  funchuk_test.c  onechuk_test.c
training/: collect_training_data.py  good_model_weights.h5  train_model.py
training/data/: rGESTURE_CENTER_CLICK.test  rGESTURE_CENTER_CLICK.train  rGESTURE_CIRCLE.test  rGESTURE_CIRCLE.train  rGESTURE_DOWN_FLICK.test  rGESTURE_DOWN_FLICK.train  rGESTURE_LEFT_FLICK.test  rGESTURE_LEFT_FLICK.train  rGESTURE_RIGHT_FLICK.test  rGESTURE_RIGHT_FLICK.train  rGESTURE_UP_FLICK.test  rGESTURE_UP_FLICK.train
training/output/: gesture_model.tflite  labels.txt  tf_gesture_model.h5
